--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Orders/EditorTemplates/NewLogEditModel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Orders/EditorTemplates/NewLogEditModel.cshtml
@@ -17,7 +17,7 @@
     <tr>
         <td></td>
         <td>
-            @Html.Partial("_SendToDialog", Model.Log.Value.SendToDialog, new ViewDataDictionary(new ViewDataDictionary { { "Id", "log_send_to_dialog" }, { "Callback", "fillLogSendLogNoteToEmailsTextArea" } }))
+            @Html.Partial("_SendToDialog", Model.Log.Value.SendToDialog, new ViewDataDictionary(ViewData) { { "Id", "log_send_to_dialog" }, { "Callback", "fillLogSendLogNoteToEmailsTextArea" } })
             @Html.TextAreaFor(m => m.Log.Value.Emails, new { id = "log_send_to_emails_textarea", @readonly = "readonly" })
             <a id="log_send_to_button" class="btn">
                 @Translation.Get("till")
