--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/Edit.cshtml
@@ -1,4 +1,5 @@
 ﻿@model DH.Helpdesk.Web.Models.Case.CaseInputViewModel
+@using DH.Helpdesk.Common.Extensions.Boolean
 @using DH.Helpdesk.Web
 @using DH.Helpdesk.Web.Common.Enums.Case
 
@@ -32,7 +33,11 @@
 
         $(function () {
 
-            CaseInitForm();
+            var opt = {
+             twoAttacmentsMode: @(Model.EnableTwoAttachments.ToJavaScriptBool()) 
+            };
+
+            CaseInitForm(opt);
 
             var dc = function(text) {
                 return $("<div>" + text + "<div>");
