--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/log-files-upload/log-files-upload.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/log-files-upload/log-files-upload.component.html
@@ -1,6 +1,6 @@
 <div>
-  <label for="logfileupload">
-    <input type="file" id="logfileupload" name="logfileupload" class="fileupload" ng2FileSelect
+  <label [for]="id">
+    <input type="file" [id]="id" [name]="id" class="fileupload" ng2FileSelect
       [uploader]="fileUploader" multiple />
     <span class="mbsc-btn mbsc-btn-ic mbsc-ic mbsc-ic-fa-upload" translate>Bifoga</span>
   </label>
