--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -2397,6 +2397,10 @@ h4 {
     background-image: url("../img/glyphicons-halflings-dh.png");
 }
 
+.sm-fa {
+    font-size: 12px!important;
+}
+
 [class^="dh-icon-"],
 [class*=" dh-icon-"] {
     display: inline-block;
