#72839 - Two attachment fields: Log Note UI; Edit Log.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_LogNoteFiles.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_LogNoteFiles.cshtml
@@ -20,6 +20,11 @@
     {
         return logFile.LogType == LogFileType.External ? "fa sm-fa fa-file-o" : "fa sm-fa fa-file";
     }
+
+    string GetLogTypeText(LogFileOverview logFile)
+    {
+        return logFile.LogType == LogFileType.External ? Translation.GetCoreTextTranslation("External log file") : Translation.GetCoreTextTranslation("Internal log file");
+    }
 }
 
 @if (currentLog.LogFiles != null)
@@ -42,25 +47,16 @@
                         }
                         else
                         {
-                            <a target="_blank" class="isExisted" href="@BuildLogFileLinkVD(currentLog.Id, l.FileName, l.LogType)"><i class="@(GetFileIcon(l))"></i> @l.FileName</a>
-                        }
-                    }
-                }
-                else
-                {
-                    if (l.CaseId.HasValue)
-                    {
-                        <a target="_blank" class="isExisted" href="@BuildCaseFileLinkVD(l.FileName)"><i class="icon- attachedFile"></i>@l.FileName</a>
-                    }
-                    else
-                    {
-                        if (l.LogId.HasValue)
-                        {                            
-                            <a target="_blank" class="isExisted" href="@BuildLogFileLinkVD(l.LogId.Value, l.FileName, l.LogType)"><i class="icon- attachedFile"></i> @l.FileName</a>
-                        }
-                        else
-                        {
-                            <a target="_blank" class="isExisted" href="@Url.Action("DownloadLogFile", new { id = currentLog.Id, fileName = l.FileName })"><i class="@(GetFileIcon(l))"></i> @l.FileName</a>
+                             if (Model.CaseFiles.VirtualDirectory)
+                             {
+                                 <a target="_blank" class="isExisted" href="@BuildLogFileLinkVD(currentLog.Id, l.FileName, l.LogType)"
+                                    data-toggle="tooltip" rel="tooltip" data-placement="top" title="@(GetLogTypeText(l))"><i class="@(GetFileIcon(l))"></i> @l.FileName</a>
+                             }
+                             else
+                             {
+                                 <a target="_blank" class="isExisted"  href="@Url.Action("DownloadLogFile", new { id = currentLog.Id, fileName = l.FileName })"
+                                    data-toggle="tooltip" rel="tooltip" data-placement="top" title="@(GetLogTypeText(l))"><i class="@(GetFileIcon(l))"></i> @l.FileName</a>
+                             }
                         }
                     }
                 }
