--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInputFilesAttachment.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInputFilesAttachment.cshtml
@@ -21,13 +21,9 @@
             }
         </td>
         <td>
-            <a href="" id="attachExistingFile" role="button" class="btn @logNoteType" style="margin-left: 20px;">
-                <img src="@Url.Content("~/Content/img/clip.png")" /></a>
-            <div id="attached_files_view">
-                <!--  modal dialog was moved to Input parent view
-                Html.Partial("ModalDialogs/_CaseAttachExistFile", Model)
-                -->
-            </div>
+            <a href="" class="btn attachExistingFile" role="button" data-logtype="@logNoteType" style="margin-left: 20px;">
+                <img src="@Url.Content("~/Content/img/clip.png")" />
+            </a>
         </td>
     </tr>
     <tr><td>&nbsp;</td></tr>
@@ -35,8 +31,8 @@
 <tr>
     <td class="span3"></td>
     <td>
+        @Html.Hidden(Model.IsExternalNote ? "LogFileNames" : "LogFileNamesInternal")
         <div id="divCaseLogFiles" class="@(logNoteType)-files">
-            @Html.Hidden("LogFileNames")
             @Html.Partial("_CaseLogFiles", Model.LogFilesModel)
         </div>
     </td>
